# MadnessChat

./: README.md
madness_client/: Cargo.toml
madness_client/src/: main.rs
madness_server/: Cargo.toml
madness_server/src/: main.rs
