[package]
name = "madness_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures = "0.3.30"
clap = { version = "4.5.4", features = ["cargo"] }
colored = "2.1.0"
local-ip-address = "0.6.1"